# orange-alert

./: .gitignore  README.md
cfg_construct/: CMakeLists.txt  draw.sh  example.tac  example.tac_cfg.dot
cfg_construct/.cache/clangd/index/: control_flow_graph.h.60EC1DD2AA12C151.idx  main.cpp.9A7F63639BC7C380.idx  scanner.cpp.F9E876F33647B7C2.idx  scanner.h.1203891EC1C3EBAE.idx
cfg_construct/src/: main.cpp  scanner.cpp
cfg_construct/src/include/: control_flow_graph.h  scanner.h
clients/: analytics_client.dl  delout.py  orange_slice.dl  orange_visualizeout.py
dataset/: ac_labels.json  arith_labels.json  combined_graph_filtered.gpickle  dos_labels.json  fr_labels.json  overflow.gpickle  overflow_labels.json  reentrancy.gpickle  reentrancy_labels.json  timestamp_with_normal_labels.json  ts_labels.json  ucllc_labels.json  ucllc_small.gpickle  ucllc_small_labels.json
examples/: contract.tac  contract.tac_cfg.dot  contract_del.tac  contract_del.tac_cfg.dot
experiments_mythril/: classify_result.py  run_mythril_analyze.mjs
mando/: README.md  graph_classifier.py  requirements.txt
mando/experiments/ge-sc-data/byte_code/dagnn/: filtered_labels.json
mando/forensics/graph_hiddens/reentrancy/: creation_last_attention.pt
mando/logs/graph_classification/cfg/gae/access_control/: events.out.tfevents.1721712591.RTX5090ti.73004.0
mando/process_graphs/: dgl_graph_generator.py
mando/sco_models/: dataloader.py  graph_utils.py  model_hetero.py  visualization.py
utils/: combine_graph.py
(+182 files in other folders)
